# llm-summarizer

./: .gitignore  CODEOWNERS  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: client.py  format_prompt.txt  prompts.py  summarize_prompt.txt  summarizer.py
tests/: test_download.py  test_summarize.py  test_transcribe.py
tests/fixtures/: mock_dependencies.py  sample_subtitles.vtt  sample_transcript.txt  subtitles.vtt  transcript.txt
